Terraform Projects/AWS VPC Project/vpc.tf
# VPC configuration

resource "aws_vpc" "main_vpc" {
    cidr_block = "10.0.0.0/16"  # must pick a large enough range that doesn't conflict with other networks

    # enabling DNS support as many components rely on it
    enable_dns_hostnames = true
    enable_dns_support = true

    tags = {
      Name = "dev-main"
    }
}
